# sdk-diatheke

./: .clang-format  .gitignore  Makefile  Package.resolved  Package.swift  README.md  jitpack.yml
docs/: 404.html  index.html  index.json  index.xml  sitemap.xml
docs-src/: config.toml  go.mod  go.sum
docs-src/content/: _header.md  _index.md
docs-src/content/audio-input/: _index.md
docs-src/content/audio-output/: _index.md
docs-src/content/connecting/: _index.md
docs-src/content/error-handling/: _index.md
docs-src/content/examples/: _index.md
docs-src/content/getting-started/: _index.md
docs-src/content/glossary/: _index.md
docs-src/content/including-sdk/: _index.md
docs-src/content/protobuf/: _index.md
docs-src/content/server/: _index.md
docs-src/content/sessions/: _index.md  actions.md  create.md  delete.md  update.md
docs-src/content/using-diatheke-sdk/: _index.md  connecting.md  errors.md  include.md  streaming-asr.md  streaming-tts.md
docs-src/content/using-diatheke-sdk/session/: audio-input.md  audio-output.md  create-session.md  event-stream.md  push-text.md
docs-src/v1/: go.mod
docs-src/v1/content/: _index.md
docs-src/v1/content/glossary/: _index.md
docs-src/v1/content/protobuf/: _index.md
docs-src/v1/content/using-diatheke-sdk/: _index.md  connecting.md
docs-src/v2/: config.toml  go.mod
docs-src/v2/content/: _header.md  _index.md
docs-src/v2/content/audio-input/: _index.md
docs-src/v2/content/audio-output/: _index.md
docs-src/v2/content/connecting/: _index.md
docs-src/v2/content/error-handling/: _index.md
docs-src/v2/content/including-sdk/: _index.md
docs-src/v2/content/protobuf/: _index.md
docs-src/v2/content/sessions/: _index.md  actions.md  create.md  delete.md  update.md
docs/_header/: index.html
docs/categories/: index.html  index.xml
docs/categories/page/1/: index.html
docs/getting-started/: index.html  index.xml
docs/glossary/: index.html  index.xml
docs/protobuf/: index.html  index.xml
docs/tags/: index.html  index.xml
docs/using-diatheke-sdk/: index.html  index.xml
docs/using-diatheke-sdk/client-configs/: index.html
docs/using-diatheke-sdk/connecting/: index.html
docs/using-diatheke-sdk/errors/: index.html
docs/using-diatheke-sdk/include/: index.html
docs/using-diatheke-sdk/installation/: index.html
docs/using-diatheke-sdk/recognize/: index.html
docs/using-diatheke-sdk/session/: index.html  index.xml
docs/using-diatheke-sdk/streaming/: index.html
docs/using-diatheke-sdk/streaming-asr/: index.html
docs/using-diatheke-sdk/streaming-tts/: index.html
examples/: config.sample.toml
examples/cpp/: CMakeLists.txt  README.md  ansi_escape_codes.h  asr_main.cpp  audio_main.cpp  cli_main.cpp  tts_main.cpp
examples/cpp/audioIO/: CMakeLists.txt  player.cpp  player.h  recorder.cpp  recorder.h
examples/cpp/config/: CMakeLists.txt  demo_config.cpp  demo_config.h
examples/go/: .gitignore  README.md  config.toml.sample  go.mod  go.sum
examples/python/: README.md  audio_io.py  config.py  demo-asr.py  demo-audio.py  demo-cli.py  demo-tts.py  textui.py
grpc/: Makefile  autogen-doc-diatheke-proto.md  diatheke.proto  doc.md.tmpl
grpc/android-diatheke/sdk/: .gitignore
grpc/cpp-diatheke/: CMakeLists.txt  CobaltGRPC.cmake  README.md  diatheke_asr_stream.cpp  diatheke_asr_stream.h  diatheke_audio_helpers.cpp  diatheke_audio_helpers.h  diatheke_audio_input_stream.cpp  diatheke_audio_input_stream.h  diatheke_audio_reply_stream.cpp  diatheke_audio_reply_stream.h  diatheke_client.cpp  diatheke_client.h  diatheke_client_error.cpp  diatheke_client_error.h  diatheke_command_status.cpp  diatheke_command_status.h  diatheke_event_stream.cpp  diatheke_event_stream.h  diatheke_session.cpp  diatheke_session.h  diatheke_transcribe_stream.cpp  diatheke_transcribe_stream.h  diatheke_tts_stream.cpp  diatheke_tts_stream.h
grpc/go-diatheke/: client.go  go.mod  go.sum  session.go  streams.go
grpc/go-diatheke/diathekepb/: diatheke.pb.go
grpc/go-diatheke/v2/: client.go  go.mod  streams.go
grpc/java-diatheke/: .gitignore  README.md  build.gradle  settings.gradle
grpc/java-diatheke/lib/: build.gradle
grpc/java-diatheke/liblite/: build.gradle
grpc/py-diatheke/: setup.py
grpc/py-diatheke/diatheke/: __init__.py  client.py  diatheke_pb2.py  diatheke_pb2_grpc.py  session.py  streams.py
grpc/swift-diatheke/: ASRStream.swift  AudioInputStream.swift  Client.swift  CommandStatus.swift  Diatheke.swift  Session.swift  TTSStream.swift  TranscribeStream.swift  diatheke.grpc.swift  diatheke.pb.swift
sdk-diatheke/grpc/go-diatheke/: _go.mod  client.go
(+31 files in other folders)
